# evolution

./: .dockerignore  .env.example  .gitignore  README.md  client  manage  pyproject.toml  tasks.py
.github/workflows/: ruff_check.yaml  test_apps.yaml  test_libs.yaml
deploy/: Dockerfile
evolution/: manage.py
evolution/authentication/: apps.py  auth0.py  constants.py  timing.py
evolution/authentication/migrations/: 0001_create_user_table_index.py
evolution/evolution_core/: apps.py  models.py  serializers.py  tests.py  views.py
evolution/evolution_core/base/: animal.py  move.py
evolution/evolution_core/base/tests/: test_animal.py
evolution/evolution_core/cards/: areas.py  traits.py
evolution/evolution_core/cards/tests/: test_traits.py
evolution/evolution_core/mechanics/: attack.py  moves.py  setup.py  states.py
evolution/evolution_core/mechanics/tests/: conftest.py  test_attack.py  test_phase.py  test_this.py
evolution/evolution_core/migrations/: 0001_initial.py  0002_alter_game_current_epoch.py  0003_alter_game_player_table_alter_game_trait_deck.py  0004_remove_area_is_active_remove_area_special_effects.py  0005_player_animal_order_player_animals.py  0006_alter_epoch_previous_epoch.py  0007_game_ended.py  0008_remove_game_max_epochs.py  0009_remove_action_animal_remove_action_timestamp_and_more.py  0010_epoch_current_player_alter_epoch_first_player.py  0011_game_created_by_alter_epoch_current_phase.py  0012_remove_game_epoch_epoch_epoch_number.py  0013_alter_action_id_alter_animal_fat_tokens_and_more.py  0014_animal_evolution_c_player__5902b7_idx_and_more.py  0015_alter_action_options_action_created_at_action_epoch_and_more.py
evolution/evolution_game/: asgi.py  settings.py  settings_prod.py  urls.py  views.py  wsgi.py
src/evolution-client/: pyproject.toml
src/evolution-client/evolution/client/: __init__.py  __main__.py  auth.py  game.py  meta.py  utils.py
src/evolution-client/evolution/client/apps/auth/: __init__.py
src/evolution-client/evolution/client/apps/game/: __init__.py
src/evolution_client/: pyproject.toml
src/evolution_client/evolution_client/: __init__.py  __main__.py  game.py  observe.py  play.py  user.py
src/evolution_integration/: pyproject.toml
src/evolution_integration/evolution_integration/: check_setup.py
web/evolution/: eslint.config.mjs  package-lock.json  package.json
web/evolution/src/components/Authentication/: LoginForm.tsx  LogoutButton.tsx
web/evolution/src/components/Game/: GameComponent.tsx  JoinGameButton.tsx  MainGame.tsx  NewGameButton.tsx  StartGameButton.tsx
web/evolution/src/components/Game/Components/Blurb/: Welcome.tsx
web/evolution/src/components/Game/Components/Board/: GameBoard.tsx
web/evolution/src/components/Game/Components/Buttons/: JoinGameButton.tsx  NewGameButton.tsx  StartGameButton.tsx
web/evolution/src/components/Game/Components/Trays/: HandTray.tsx
web/evolution/src/components/Game/components/: HandTray.tsx
web/evolution/src/components/Layout/: GameDrawer.tsx  Main.tsx
web/evolution/src/context/: GameContext.ts  UserContext.ts
web/evolution/src/pages/: _app.tsx  _document.tsx  index.tsx
web/evolution/src/pages/api/auth/: login.ts
web/evolution/src/pages/api/game/: all.ts  new.ts
web/evolution/src/pages/api/observe/: game.ts  games_for_user.ts
web/evolution/src/pages/api/play/: basicAction.ts
web/evolution/src/pages/api/proxy/: [...path].ts
web/evolution/src/pages/api/setup/: join.ts  new.ts  start.ts
web/evolution/src/types/: Game.ts  types.d.ts
web/evolution/src/utils/: apiHandler.ts  axiosInstance.ts  callApi.ts
