[tool.poetry]
name = "evolution-client"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [
    { include = "evolution", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "*"
requests = "*"
auth0-python = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
