[tool.poetry]
name = "evolution-integration"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [{ include = "evolution_integration" }]

[tool.poetry.dependencies]
python = "^3.11"
evolution-client = { path = "../evolution_client" }
faker = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
